<resources>
    <string name="app_name">AAE</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="symptom">Symptom</string>
    <string name="symptoms">Actual symptoms</string>
    <string name="diagnosis">Your diagnosis</string>
    <string name="youmayhave">You may have :</string>
    <string name="list_empty">The list is empty</string>
    <string name="nothing">Nothing !</string>
    <string name="loading">Loading..</string>
</resources>
