<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d9d9d9">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:textSize="20sp"
            android:text="@string/diagnosis" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:text="Return"
            android:onClick="finishActivity"/>
    </RelativeLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="230dp"
        android:orientation="vertical"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp">

        <GridView
            android:id="@+id/list_symptoms2_grid_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="auto_fit"
            android:columnWidth="100dp"
            android:verticalSpacing="10dp"
            android:horizontalSpacing="10dp"
            android:gravity="center" />

        <TextView
            android:id="@+id/empty_list2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/list_empty"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border3"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:textSize="20sp"
            android:text="@string/youmayhave"
            android:textStyle="bold"
            android:textColor="@android:color/white"/>
        <GridView
            android:id="@+id/list_diseases_grid_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="1"
            android:horizontalSpacing="10dp"
            android:gravity="center"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:id="@+id/empty_list3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/nothing"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#00b050"
            android:paddingBottom="10dp"/>
        <TextView
            android:id="@+id/loading_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/loading"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#333333"
            android:paddingBottom="10dp"/>
    </LinearLayout>

</LinearLayout>